[package]
name = "better_key"
version = "0.1.2"
repository = "https://github.com/worstmageplayer/better_key"
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse" ,
] }

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
codegen-units = 16
panic = "abort"
strip = true
